Fix timeline arrow z-indexing issue. Closes #188.

--- a/src/components/AppBar/AppBarContainerStyles.scss
+++ b/src/components/AppBar/AppBarContainerStyles.scss
@@ -5,7 +5,7 @@
     position: absolute;
     top: 0px;
     width: 100%;
-    z-index: 3;
+    z-index: 4;
 }
 .shadow {
     position: absolute;
