--- a/src/components/FeatureDetail/FeatureDetailContainerStyles.scss
+++ b/src/components/FeatureDetail/FeatureDetailContainerStyles.scss
@@ -5,7 +5,7 @@
     background: white;
     left: $layer-sidebar-width;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     height: calc(100% - #{$app-bar-height});
     width: calc(100% - #{$layer-sidebar-width});
     overflow: auto;
